--- a/boilerplate/css/main.css
+++ b/boilerplate/css/main.css
@@ -7178,3 +7178,21 @@ ul.nav-categories > li > a:hover {
 h2.certifications-heading, h2.clients-heading {
   text-align:center;
 }
+.contact-section {
+  margin:30px 0px;
+}
+#form-1 textarea {
+    background-color: #f4f4f4;
+    border: 0;
+    padding: 10px;
+    color: #333;
+    width: 100%;
+    border-radius: 5px;
+}
+.form-control {
+    background-color: #F4F4F4;
+    border-radius: 3px;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    border: 0;
+}
