contactus page changes with pushpin

--- a/boilerplate/css/main.css
+++ b/boilerplate/css/main.css
@@ -7196,3 +7196,7 @@ h2.certifications-heading, h2.clients-heading {
     box-shadow: none;
     border: 0;
 }
+.sidebar-map > div {
+    height: 260px;
+    overflow:hidden;
+}
