--- a/boilerplate/css/main.css
+++ b/boilerplate/css/main.css
@@ -5199,7 +5199,7 @@ div[class*="col-"] > .form-group {
 
 .testimonial-with-bg {
   padding: 120px 0;
-  background-image: url('../img/testimonial-bg.png');
+  background-image: url('../img/adobe-stock/AdobeStock_124295578_Preview.jpg');
   background-attachment: fixed;
   background-position: center center;
   color: #fff;
