--- a/boilerplate/include/header.html
+++ b/boilerplate/include/header.html
@@ -11,32 +11,40 @@
                     </div>
                     <div class="collapse navbar-collapse">
                         <ul class="nav navbar-nav  navbar-right">
+                            <li><a href="#" target="_blank">HOME</a></li>
                             <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">OUR COMPANY<i class="fa fa-angle-down"></i></a>
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">About US<i class="fa fa-angle-down"></i></a>
 
                                 <ul class="dropdown-menu">
-                                    <li><a href="#">Overview</a></li>
-                                    <li><a href="#">News</a></li>
-                                    <li><a href="#">Advisors</a></li>
+                                    <li><a href="#">OUR GOAL</a></li>
+                                    <li><a href="#">OUR TEAM</a></li>
+                                    <li><a href="#">FLEXIBILITY</a></li>
+                                    <li><a href="#">ADVISORY BOARD</a></li>
                                 </ul>
                               </li>
-                              <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">CAPABILITIES<i class="fa fa-angle-down"></i></a>
+                              <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">CERTIFICATIONS & CONTRACT VEHICLES<i class="fa fa-angle-down"></i></a>
                                <ul class="dropdown-menu">
-                                    <li><a href="#">Agile Software Development</a></li>
-                                    <li><a href="#">DevOps</a></li>
-                                    <li><a href="#">Cloud & Cloud Migration Services</a></li>
-                                    <li><a href="#">Big Dta</a></li>
-                                    <li><a href="#">IOT</a></li>
-                                    <li><a href="#">Cyber Security</a></li>
-                                    <li><a href="#">Shared Services</a></li>
-                                    <li><a href="#">Managed Services</a></li>
-                                    <li><a href="#">IV&V and Testing Servives</a></li>
+                              <li><a href="#" target="_blank">CERTIFICATIONS</a></li>
+                              <li><a href="contactUs/contactUs.html" target="_blank">CONTRACT VEHICLES</a></li>
+                              </ul>
+                              </li>
+                              <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">CAPABILITY<i class="fa fa-angle-down"></i></a>
+                               <ul class="dropdown-menu">
+                                    <li><a href="#">STAFFING SOLUTIONS</a></li>
+                                    <li><a href="#">PROGRAM AND PROJECT MANAGEMENT</a></li>
+                                    <li><a href="#">AGILE SOFTWARE DEVELOPMENT</a></li>
+                                    <li><a href="#">ERP IMPLEMENTATION, MAINTENANCE AND SUPPORT</a></li>
+                                    <li><a href="#">GEOSPATIAL SOLUTIONS</a></li>
+                                    <li><a href="#">ENTERPRISE SERVICE DESK</a></li>
+                                    <li><a href="#">TESTING AND IV&V</a></li>
+                                    <li><a href="#">DATA CENTER CONSOLIDATION</a></li>
+                                    <li><a href="#">MOBILITY</a></li>
+                                    <li><a href="#">BIG DATA</a></li>
+                                    <li><a href="#">SECURITY SOLUTIONS</a></li>
                                   </ul>
                               </li>
-                              <li><a href="#" target="_blank">CONTRACTS</a></li>
-                              <li><a href="contactUs/contactUs.html" target="_blank">CERTIFICATIONS</a></li>
-
-                                <li><a href="#" target="_blank">PARTNERS & CLIENTS</a></li>
+                                <li><a href="#" target="_blank">CLIENTS</a></li>
+                                <li><a href="#" target="_blank">CAREERS</a></li>
                                 <li><a href="contactUs/contactUs.html" target="_blank">CONTACT US</a></li>
 
                           </ul>
