added new files and changes as per content

--- a/boilerplate/css/main.css
+++ b/boilerplate/css/main.css
@@ -7203,3 +7203,16 @@ h2.certifications-heading, h2.clients-heading {
 .advisoryBoard img {
   border-radius:50%;
 }
+ul.clients-block li {
+    list-style: none;
+    float: left;
+    min-width: 180px;
+    min-height: 110px;
+    margin: 20px 40px 15px 0;
+    vertical-align: bottom;
+    text-align: center;
+    background-color: #fff;
+    padding: 10px;
+    border-radius: 5px;
+    box-shadow: 0 0 8px 0px #ccc;
+}
