--- a/boilerplate/include/header.html
+++ b/boilerplate/include/header.html
@@ -11,41 +11,45 @@
                     </div>
                     <div class="collapse navbar-collapse">
                         <ul class="nav navbar-nav  navbar-right">
-                            <li><a href="#" target="_blank">HOME</a></li>
+                            <li><a href="http://localhost/attainx/boilerplate/index.html">HOME</a></li>
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">About US<i class="fa fa-angle-down"></i></a>
 
                                 <ul class="dropdown-menu">
-                                    <li><a href="#">OUR GOAL</a></li>
-                                    <li><a href="#">OUR TEAM</a></li>
-                                    <li><a href="#">FLEXIBILITY</a></li>
-                                    <li><a href="#">ADVISORY BOARD</a></li>
+                                    <li><a href="http://localhost/attainx/boilerplate/aboutUs.html#ourGoal">OUR GOAL</a></li>
+                                    <li><a href="http://localhost/attainx/boilerplate/aboutUs.html#ourTeam">OUR TEAM</a></li>
+                                    <li><a href="http://localhost/attainx/boilerplate/aboutUs.html#flexibility">FLEXIBILITY</a></li>
+                                    <li><a href="http://localhost/attainx/boilerplate/advisoryBoard.html">ADVISORY BOARD</a></li>
                                 </ul>
                               </li>
                               <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">CERTIFICATIONS & CONTRACT VEHICLES<i class="fa fa-angle-down"></i></a>
                                <ul class="dropdown-menu">
-                              <li><a href="#" target="_blank">CERTIFICATIONS</a></li>
-                              <li><a href="contactUs/contactUs.html" target="_blank">CONTRACT VEHICLES</a></li>
+                              <li><a href="http://localhost/attainx/boilerplate/certifications.html">CERTIFICATIONS</a></li>
+                              <li><a href="http://localhost/attainx/boilerplate/contractVehicles.html">CONTRACT VEHICLES</a></li>
                               </ul>
                               </li>
                               <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">CAPABILITY<i class="fa fa-angle-down"></i></a>
                                <ul class="dropdown-menu">
-                                    <li><a href="#">STAFFING SOLUTIONS</a></li>
-                                    <li><a href="#">PROGRAM AND PROJECT MANAGEMENT</a></li>
-                                    <li><a href="#">AGILE SOFTWARE DEVELOPMENT</a></li>
-                                    <li><a href="#">ERP IMPLEMENTATION, MAINTENANCE AND SUPPORT</a></li>
-                                    <li><a href="#">GEOSPATIAL SOLUTIONS</a></li>
-                                    <li><a href="#">ENTERPRISE SERVICE DESK</a></li>
-                                    <li><a href="#">TESTING AND IV&V</a></li>
-                                    <li><a href="#">DATA CENTER CONSOLIDATION</a></li>
-                                    <li><a href="#">MOBILITY</a></li>
-                                    <li><a href="#">BIG DATA</a></li>
-                                    <li><a href="#">SECURITY SOLUTIONS</a></li>
+                                    <li><a href="http://localhost/attainx/boilerplate/staffingSolutions.html">STAFFING SOLUTIONS</a></li>
+                                    <li><a href="http://localhost/attainx/boilerplate/programAndProjectManagement.html">PROGRAM AND PROJECT MANAGEMENT</a></li>
+                                    <li><a href="http://localhost/attainx/boilerplate/agileSoftwareDevelopment.html">AGILE SOFTWARE DEVELOPMENT</a></li>
+                                    <li><a href="http://localhost/attainx/boilerplate/erp.html">ERP IMPLEMENTATION, MAINTENANCE AND SUPPORT</a></li>
+                                    <li><a href="http://localhost/attainx/boilerplate/cloud.html">CLOUD - APPLICATONS AND MIGRATION</a></li>
+                                    <li><a href="http://localhost/attainx/boilerplate/geospatialSolutions.html">GEOSPATIAL SOLUTIONS</a></li>
+                                    <li><a href="http://localhost/attainx/boilerplate/enterpriseServiceDesk.html">ENTERPRISE SERVICE DESK</a></li>
+                                    <li><a href="http://localhost/attainx/boilerplate/testing.html">TESTING AND IV&V</a></li>
+                                    <li><a href="http://localhost/attainx/boilerplate/dataCenterConsolidation.html">DATA CENTER CONSOLIDATION</a></li>
+                                    <li><a href="http://localhost/attainx/boilerplate/mobility.html">MOBILITY</a></li>
+                                    <li><a href="http://localhost/attainx/boilerplate/bigData.html">BIG DATA</a></li>
+                                    <li><a href="http://localhost/attainx/boilerplate/enterpriseArchitecture.html">ENTERPRISE ARCHITECTURE</a></li>
+                                    <li><a href="http://localhost/attainx/boilerplate/devops.html">DEVOPS</a></li>
+                                    <li><a href="http://localhost/attainx/boilerplate/cyberSecurity.html">CYBER SECURITY</a></li>
+                                    <li><a href="http://localhost/attainx/boilerplate/securitySolutions.html">SECURITY SOLUTIONS</a></li>
                                   </ul>
                               </li>
-                                <li><a href="#" target="_blank">CLIENTS</a></li>
-                                <li><a href="#" target="_blank">CAREERS</a></li>
-                                <li><a href="contactUs/contactUs.html" target="_blank">CONTACT US</a></li>
+                                <li><a href="http://localhost/attainx/boilerplate/clients.html">CLIENTS</a></li>
+                                <li><a href="http://localhost/attainx/boilerplate/careers.html">CAREERS</a></li>
+                                <li><a href="http://localhost/attainx/boilerplate/contactUs.html">CONTACT US</a></li>
 
                           </ul>
                         </div>
