--- a/boilerplate/include/header.html
+++ b/boilerplate/include/header.html
@@ -2,54 +2,53 @@
                <div class="container">
                     <div class="navbar-header">
                         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                            <span class="sr-only">Toggle navigation</span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
+                          <span class="sr-only">Toggle Navigation</span>
+                          <i class="fa fa-bars"></i>
+                        </button>
                         </button>
                         <a class="navbar-brand" href="index.html"><img src="img/attainx-logo.jpg" alt="Attanix Logo"/></a>
                     </div>
                     <div class="collapse navbar-collapse">
                         <ul class="nav navbar-nav  navbar-right">
-                            <li><a href="http://localhost/attainx/boilerplate/index.html">HOME</a></li>
+                            <li><a href="index.html">HOME</a></li>
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">About US<i class="fa fa-angle-down"></i></a>
 
                                 <ul class="dropdown-menu">
-                                    <li><a href="http://localhost/attainx/boilerplate/aboutUs.html#ourGoal">OUR GOAL</a></li>
-                                    <li><a href="http://localhost/attainx/boilerplate/aboutUs.html#ourTeam">OUR TEAM</a></li>
-                                    <li><a href="http://localhost/attainx/boilerplate/aboutUs.html#flexibility">FLEXIBILITY</a></li>
-                                    <li><a href="http://localhost/attainx/boilerplate/advisoryBoard.html">ADVISORY BOARD</a></li>
+                                    <li><a href="aboutUs.html#ourGoal">OUR GOAL</a></li>
+                                    <li><a href="aboutUs.html#ourTeam">OUR TEAM</a></li>
+                                    <li><a href="aboutUs.html#flexibility">FLEXIBILITY</a></li>
+                                    <li><a href="advisoryBoard.html">ADVISORY BOARD</a></li>
                                 </ul>
                               </li>
                               <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">CERTIFICATIONS & CONTRACT VEHICLES<i class="fa fa-angle-down"></i></a>
                                <ul class="dropdown-menu">
-                              <li><a href="http://localhost/attainx/boilerplate/certifications.html">CERTIFICATIONS</a></li>
-                              <li><a href="http://localhost/attainx/boilerplate/contractVehicles.html">CONTRACT VEHICLES</a></li>
+                              <li><a href="certifications.html">CERTIFICATIONS</a></li>
+                              <li><a href="contractVehicles.html">CONTRACT VEHICLES</a></li>
                               </ul>
                               </li>
                               <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">CAPABILITY<i class="fa fa-angle-down"></i></a>
                                <ul class="dropdown-menu">
-                                    <li><a href="http://localhost/attainx/boilerplate/staffingSolutions.html">STAFFING SOLUTIONS</a></li>
-                                    <li><a href="http://localhost/attainx/boilerplate/programAndProjectManagement.html">PROGRAM AND PROJECT MANAGEMENT</a></li>
-                                    <li><a href="http://localhost/attainx/boilerplate/agileSoftwareDevelopment.html">AGILE SOFTWARE DEVELOPMENT</a></li>
-                                    <li><a href="http://localhost/attainx/boilerplate/erp.html">ERP IMPLEMENTATION, MAINTENANCE AND SUPPORT</a></li>
-                                    <li><a href="http://localhost/attainx/boilerplate/cloud.html">CLOUD - APPLICATONS AND MIGRATION</a></li>
-                                    <li><a href="http://localhost/attainx/boilerplate/geospatialSolutions.html">GEOSPATIAL SOLUTIONS</a></li>
-                                    <li><a href="http://localhost/attainx/boilerplate/enterpriseServiceDesk.html">ENTERPRISE SERVICE DESK</a></li>
-                                    <li><a href="http://localhost/attainx/boilerplate/testing.html">TESTING AND IV&V</a></li>
-                                    <li><a href="http://localhost/attainx/boilerplate/dataCenterConsolidation.html">DATA CENTER CONSOLIDATION</a></li>
-                                    <li><a href="http://localhost/attainx/boilerplate/mobility.html">MOBILITY</a></li>
-                                    <li><a href="http://localhost/attainx/boilerplate/bigData.html">BIG DATA</a></li>
-                                    <li><a href="http://localhost/attainx/boilerplate/enterpriseArchitecture.html">ENTERPRISE ARCHITECTURE</a></li>
-                                    <li><a href="http://localhost/attainx/boilerplate/devops.html">DEVOPS</a></li>
-                                    <li><a href="http://localhost/attainx/boilerplate/cyberSecurity.html">CYBER SECURITY</a></li>
-                                    <li><a href="http://localhost/attainx/boilerplate/securitySolutions.html">SECURITY SOLUTIONS</a></li>
+                                    <li><a href="staffingSolutions.html">STAFFING SOLUTIONS</a></li>
+                                    <li><a href="programAndProjectManagement.html">PROGRAM AND PROJECT MANAGEMENT</a></li>
+                                    <li><a href="agileSoftwareDevelopment.html">AGILE SOFTWARE DEVELOPMENT</a></li>
+                                    <li><a href="erp.html">ERP IMPLEMENTATION, MAINTENANCE AND SUPPORT</a></li>
+                                    <li><a href="cloud.html">CLOUD - APPLICATONS AND MIGRATION</a></li>
+                                    <li><a href="geospatialSolutions.html">GEOSPATIAL SOLUTIONS</a></li>
+                                    <li><a href="enterpriseServiceDesk.html">ENTERPRISE SERVICE DESK</a></li>
+                                    <li><a href="testing.html">TESTING AND IV&V</a></li>
+                                    <li><a href="dataCenterConsolidation.html">DATA CENTER CONSOLIDATION</a></li>
+                                    <li><a href="mobility.html">MOBILITY</a></li>
+                                    <li><a href="bigData.html">BIG DATA</a></li>
+                                    <li><a href="enterpriseArchitecture.html">ENTERPRISE ARCHITECTURE</a></li>
+                                    <li><a href="devops.html">DEVOPS</a></li>
+                                    <li><a href="cyberSecurity.html">CYBER SECURITY</a></li>
+                                    <li><a href="securitySolutions.html">SECURITY SOLUTIONS</a></li>
                                   </ul>
                               </li>
-                                <li><a href="http://localhost/attainx/boilerplate/clients.html">CLIENTS</a></li>
-                                <li><a href="http://localhost/attainx/boilerplate/careers.html">CAREERS</a></li>
-                                <li><a href="http://localhost/attainx/boilerplate/contactUs.html">CONTACT US</a></li>
+                                <li><a href="clients.html">CLIENTS</a></li>
+                                <li><a href="careers.html">CAREERS</a></li>
+                                <li><a href="contactUs.html">CONTACT US</a></li>
 
                           </ul>
                         </div>
