--- a/boilerplate/include/header.html
+++ b/boilerplate/include/header.html
@@ -12,20 +12,13 @@
                         <ul class="nav navbar-nav  navbar-right">
                             <li><a href="index.html">HOME</a></li>
                             <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">About US<i class="fa fa-angle-down"></i></a>
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">OUR COMPANY<i class="fa fa-angle-down"></i></a>
 
                                 <ul class="dropdown-menu">
-                                    <li><a href="aboutUs.html#ourGoal">OUR GOAL</a></li>
-                                    <li><a href="aboutUs.html#ourTeam">OUR TEAM</a></li>
-                                    <li><a href="aboutUs.html#flexibility">FLEXIBILITY</a></li>
+                                    <li><a href="aboutUs.html#ourGoal">OVERVIEW</a></li>
+                                    <li><a href="news.html">NEWS</a></li>
                                     <li><a href="advisoryBoard.html">ADVISORY BOARD</a></li>
                                 </ul>
-                              </li>
-                              <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">CERTIFICATIONS & CONTRACT VEHICLES<i class="fa fa-angle-down"></i></a>
-                               <ul class="dropdown-menu">
-                              <li><a href="certifications.html">CERTIFICATIONS</a></li>
-                              <li><a href="contractVehicles.html">CONTRACT VEHICLES</a></li>
-                              </ul>
                               </li>
                               <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">CAPABILITY<i class="fa fa-angle-down"></i></a>
                                <ul class="dropdown-menu">
@@ -43,10 +36,12 @@
                                     <li><a href="enterpriseArchitecture.html">ENTERPRISE ARCHITECTURE</a></li>
                                     <li><a href="devops.html">DEVOPS</a></li>
                                     <li><a href="cyberSecurity.html">CYBER SECURITY</a></li>
-                                    <li><a href="securitySolutions.html">SECURITY SOLUTIONS</a></li>
                                   </ul>
                               </li>
-                                <li><a href="clients.html">CLIENTS</a></li>
+                              <li class="dropdown"><li><a href="certifications.html">CERTIFICATIONS</a></li>
+                              <li><a href="contractVehicles.html">CONTRACTS</a></li>
+
+                                <li><a href="clients.html">WHO DO WE SERVE?</a></li>
                                 <li><a href="careers.html">CAREERS</a></li>
                                 <li><a href="contactUs.html">CONTACT US</a></li>
 
