google map changes

--- a/boilerplate/include/header.html
+++ b/boilerplate/include/header.html
@@ -17,34 +17,33 @@
                                 <ul class="dropdown-menu">
                                     <li><a href="aboutUs.html#ourGoal">OVERVIEW</a></li>
                                     <li><a href="news.html">NEWS</a></li>
-                                    <li><a href="advisoryBoard.html">ADVISORY BOARD</a></li>
+                                    <li><a href="advisoryBoard.html">OUR ADVISORS</a></li>
                                 </ul>
                               </li>
                               <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">CAPABILITY<i class="fa fa-angle-down"></i></a>
                                <ul class="dropdown-menu">
-                                    <li><a href="staffingSolutions.html">STAFFING SOLUTIONS</a></li>
-                                    <li><a href="programAndProjectManagement.html">PROGRAM AND PROJECT MANAGEMENT</a></li>
+
+                                    <li><a href="programAndProjectManagement.html">PROJECT AND PROGRAM MANAGEMENT</a></li>
                                     <li><a href="agileSoftwareDevelopment.html">AGILE SOFTWARE DEVELOPMENT</a></li>
-                                    <li><a href="erp.html">ERP IMPLEMENTATION, MAINTENANCE AND SUPPORT</a></li>
-                                    <li><a href="cloud.html">CLOUD - APPLICATONS AND MIGRATION</a></li>
-                                    <li><a href="geospatialSolutions.html">GEOSPATIAL SOLUTIONS</a></li>
-                                    <li><a href="enterpriseServiceDesk.html">ENTERPRISE SERVICE DESK</a></li>
-                                    <li><a href="testing.html">TESTING AND IV&V</a></li>
-                                    <li><a href="dataCenterConsolidation.html">DATA CENTER CONSOLIDATION</a></li>
-                                    <li><a href="mobility.html">MOBILITY</a></li>
-                                    <li><a href="bigData.html">BIG DATA</a></li>
-                                    <li><a href="enterpriseArchitecture.html">ENTERPRISE ARCHITECTURE</a></li>
                                     <li><a href="devops.html">DEVOPS</a></li>
+                                    <li><a href="enterpriseArchitecture.html">ENTERPRISE ARCHITECTURE</a></li>
+                                    <li><a href="cloud.html">CLOUD APPLICATONS AND MIGRATION</a></li>
+                                    <li><a href="bigData.html">BIG DATA</a></li>
                                     <li><a href="cyberSecurity.html">CYBER SECURITY</a></li>
+                                    <li><a href="testing.html">IV&V AND TESTING</a></li>
+                                    <li><a href="dataCenterConsolidation.html">DATA CENTER CONSOLIDATION</a></li>
+                                    <li><a href="enterpriseServiceDesk.html">ENTERPRISE SERVICE DESK</a></li>
+                                    <li><a href="mobility.html">MOBILE DEVELOPMENT</a></li>
+                                    <li><a href="staffingSolutions.html">STAFFING SOLUTIONS</a></li>
+                                    <li><a href="erp.html">ERP IMPLEMENTATION, MAINTENANCE AND SUPPORT</a></li>
+                                    <li><a href="geospatialSolutions.html">GEOSPATIAL SOLUTIONS</a></li>
                                   </ul>
                               </li>
                               <li class="dropdown"><li><a href="certifications.html">CERTIFICATIONS</a></li>
                               <li><a href="contractVehicles.html">CONTRACTS</a></li>
-
-                                <li><a href="clients.html">WHO DO WE SERVE?</a></li>
-                                <li><a href="careers.html">CAREERS</a></li>
-                                <li><a href="contactUs.html">CONTACT US</a></li>
-
+                              <li><a href="clients.html">WHO DO WE SERVE?</a></li>
+                              <li><a href="careers.html">CAREERS</a></li>
+                              <li><a href="contactUs.html">CONTACT US</a></li>
                           </ul>
                         </div>
                       </div>
