Final changes for first review

--- a/boilerplate/include/footer.html
+++ b/boilerplate/include/footer.html
@@ -23,19 +23,19 @@
       <div class="row margin-bottom-30px">
         <div class="col-xs-6">
           <ul class="list-unstyled footer-nav">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">Clients</a></li>
-            <li><a href="#">Contact us</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="aboutUs.html">About Us</a></li>
+            <li><a href="clients.html">Clients</a></li>
+            <li><a href="contactUs.php">Contact us</a></li>
           </ul>
         </div>
         <div class="col-xs-6">
           <ul class="list-unstyled footer-nav">
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Software Development</a></li>
-            <li><a href="#">Big Data</a></li>
-            <li><a href="#">Mobile development</a></li>
-            <li><a href="#">SDLC</a></li>
+            <li><a href="cyberSecurity.html">Cyber Security</a></li>
+            <li><a href="devOps.html">Devops</a></li>
+            <li><a href="bigData.html">Big Data</a></li>
+            <li><a href="mobility.html">Mobile development</a></li>
+            <li><a href="erp.html">ERP</a></li>
           </ul>
         </div>
       </div>
