--- a/boilerplate/include/header.html
+++ b/boilerplate/include/header.html
@@ -15,7 +15,7 @@
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">OUR COMPANY<i class="fa fa-angle-down"></i></a>
 
                                 <ul class="dropdown-menu">
-                                    <li><a href="aboutUs.html#ourGoal">OVERVIEW</a></li>
+                                    <li><a href="aboutUs.html">OVERVIEW</a></li>
                                     <li><a href="news.html">NEWS</a></li>
                                     <li><a href="advisoryBoard.html">OUR ADVISORS</a></li>
                                 </ul>
@@ -43,7 +43,7 @@
                               <li><a href="contractVehicles.html">CONTRACTS</a></li>
                               <li><a href="clients.html">WHO DO WE SERVE?</a></li>
                               <li><a href="careers.html">CAREERS</a></li>
-                              <li><a href="contactUs.html">CONTACT US</a></li>
+                              <li><a href="contactUs.php">CONTACT US</a></li>
                           </ul>
                         </div>
                       </div>
