--- a/boilerplate/include/header.html
+++ b/boilerplate/include/header.html
@@ -12,7 +12,7 @@
                         <ul class="nav navbar-nav  navbar-right">
                             <li><a href="index.html">HOME</a></li>
                             <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">OUR COMPANY<i class="fa fa-angle-down"></i></a>
+                                <a href="aboutUs.html" class="dropdown-toggle" data-toggle="dropdown">OUR COMPANY<i class="fa fa-angle-down"></i></a>
 
                                 <ul class="dropdown-menu">
                                     <li><a href="aboutUs.html">OVERVIEW</a></li>
@@ -20,7 +20,7 @@
                                     <li><a href="advisoryBoard.html">OUR ADVISORS</a></li>
                                 </ul>
                               </li>
-                              <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">CAPABILITY<i class="fa fa-angle-down"></i></a>
+                              <li class="dropdown"><a href="programAndProjectManagement.html" class="dropdown-toggle" data-toggle="dropdown">CAPABILITY<i class="fa fa-angle-down"></i></a>
                                <ul class="dropdown-menu">
 
                                     <li><a href="programAndProjectManagement.html">PROJECT AND PROGRAM MANAGEMENT</a></li>
