--- a/boilerplate/include/certifications.html
+++ b/boilerplate/include/certifications.html
@@ -1,7 +1,7 @@
 <div class="container">
 				<h2 class="section-heading certifications-heading">CERTIFICATIONS & CONTRACT VEHICLES</h2>
 				<div class="certifications">
-            
+
 					  <div>
 							<a href="#"><img src="img/sba-logo.png" class="img-responsive" alt=""></a>
 						</div>
@@ -17,7 +17,7 @@
 						<div>
 							<a href="#"><img src="img/swam-logo.jpg" class="img-responsive" alt=""></a>
 						</div>
-						
+
 						<div>
 							<a href="#"><img src="img/ANAB.jpg" class="img-responsive" alt=""></a>
 						</div>
@@ -29,15 +29,19 @@
 			           </div>
 			           <div>
 							<a href="#"><img src="img/seaport.png" class="img-responsive" alt=""></a>
+							<span>ON TEAM</span>
 						</div>
 			           <div>
 							<a href="#"><img src="img/gsaoasis.jpg" class="img-responsive" alt=""></a>
+							<span>SUB CONTRACTOR</span>
 						</div>
 						<div>
 							<a href="#"><img src="img/gsastar.jpg" class="img-responsive" alt=""></a>
+							<span>SUB CONTRACTOR</span>
 						</div>
 						<div>
 							<a href="#"><img src="img/gsaAlliant.png" class="img-responsive" alt=""></a>
+							<span>SUB CONTRACTOR</span>
 						</div>
 
 				</div>
