--- a/boilerplate/include/header.html
+++ b/boilerplate/include/header.html
@@ -6,7 +6,7 @@
                           <i class="fa fa-bars"></i>
                         </button>
                         </button>
-                        <a class="navbar-brand" href="index.html"><img src="img/attainx-logo.jpg" alt="Attanix Logo"/></a>
+                        <a class="navbar-brand" href="index.html"><img src="img/attainx-logo.jpg" alt="AttainX Logo"/></a>
                     </div>
                     <div class="collapse navbar-collapse">
                         <ul class="nav navbar-nav  navbar-right">
@@ -17,7 +17,7 @@
                                 <ul class="dropdown-menu">
                                     <li><a href="aboutUs.html">OVERVIEW</a></li>
                                     <li><a href="news.html">NEWS</a></li>
-                                    <li><a href="advisoryBoard.html">OUR ADVISORS</a></li>
+                                    <li><a href="advisors.html">OUR ADVISORS</a></li>
                                 </ul>
                               </li>
                               <li class="dropdown"><a href="programAndProjectManagement.html" class="dropdown-toggle" data-toggle="dropdown">CAPABILITY<i class="fa fa-angle-down"></i></a>
@@ -30,11 +30,11 @@
                                     <li><a href="cloud.html">CLOUD APPLICATONS AND MIGRATION</a></li>
                                     <li><a href="bigData.html">BIG DATA</a></li>
                                     <li><a href="cyberSecurity.html">CYBER SECURITY</a></li>
-                                    <li><a href="testing.html">IV&V AND TESTING</a></li>
+                                    <li><a href="testing.html">TESTING AND IV&V</a></li>
                                     <li><a href="dataCenterConsolidation.html">DATA CENTER CONSOLIDATION</a></li>
                                     <li><a href="enterpriseServiceDesk.html">ENTERPRISE SERVICE DESK</a></li>
                                     <li><a href="mobility.html">MOBILE DEVELOPMENT</a></li>
-                                    <li><a href="staffingSolutions.html">STAFFING SOLUTIONS</a></li>
+                                    <!--<li><a href="staffingSolutions.html">STAFFING SOLUTIONS</a></li>-->
                                     <li><a href="erp.html">ERP IMPLEMENTATION, MAINTENANCE AND SUPPORT</a></li>
                                     <li><a href="geospatialSolutions.html">GEOSPATIAL SOLUTIONS</a></li>
                                   </ul>
