--- a/boilerplate/include/footer.html
+++ b/boilerplate/include/footer.html
@@ -23,16 +23,16 @@
           <ul class="list-unstyled footer-nav">
             <li><a href="index.html">Home</a></li>
             <li><a href="aboutUs.html">About Us</a></li>
-            <li><a href="clients.html">Clients</a></li>
+            <li><a href="clients.html">Who do we serve?</a></li>
             <li><a href="contactUs.php">Contact us</a></li>
           </ul>
         </div>
         <div class="col-xs-6">
           <ul class="list-unstyled footer-nav">
             <li><a href="cyberSecurity.html">Cyber Security</a></li>
-            <li><a href="devOps.html">Devops</a></li>
+            <li><a href="devOps.html">DevOps</a></li>
             <li><a href="bigData.html">Big Data</a></li>
-            <li><a href="mobility.html">Mobile development</a></li>
+            <li><a href="mobility.html">Mobile Development</a></li>
             <li><a href="erp.html">ERP</a></li>
           </ul>
         </div>
@@ -56,7 +56,7 @@
 </div>
 <!-- COPYRIGHT -->
 <div class="text-center copyright">
-  ©2017 Attanix all rights reserved.
+  ©2017 AttainX all rights reserved.
 </div>
 <!-- END COPYRIGHT -->
 </footer>
