--- a/boilerplate/css/main.css
+++ b/boilerplate/css/main.css
@@ -7240,36 +7240,36 @@ ul.clients-block li {
  section.slider-responsive {
     position:relative;
  }
- .news-outerContainer {
-    position: absolute;
-    top: 80px;
-    right: 70px;
-    color: white;
-    height: 300px;
-    width: 300px;
-    overflow: hidden;
- }
- .news-innerContainer {
-    height: 300px;
-    width: 300px;
-    overflow-y: scroll;
-    padding:0;
- }
- .news-innerContainer li {
- margin: 0.75em 0;
-    padding: 0 1em;
-    list-style: none;
-  }
- .news-innerContainer li::before{
-  content: "";
-    border-color: transparent #111;
-    border-style: solid;
-    border-width: 0.35em 0 0.35em 0.45em;
-    display: block;
-    height: 0;
-    width: 0;
-    left: -1em;
-    top: 0.9em;
-    position: relative;
-  }
-
+ .infolist{
+      width:400px;
+      margin:0;
+    }
+    .infolist ul{
+      margin:0;
+      padding:0;
+    }
+    .infolist ul li{
+      list-style:none;
+      color:white;
+    }
+    .infolist ul li::before{
+      content: "";
+        border-color: transparent #111;
+        border-style: solid;
+        border-width: 0.35em 0 0.35em 0.45em;
+        display: block;
+        height: 0;
+        width: 0;
+        left: -1em;
+        top: 0.9em;
+        position: relative;
+      }
+    .infocontent{
+      position:absolute;
+      top:100px;
+      right:70px;
+      width:400px;
+      height:275px;
+      overflow:hidden;
+      border:1px solid #666666;
+    }
