--- a/boilerplate/css/main.css
+++ b/boilerplate/css/main.css
@@ -7241,35 +7241,32 @@ ul.clients-block li {
     position:relative;
  }
  .infolist{
-      width:400px;
       margin:0;
     }
     .infolist ul{
       margin:0;
-      padding:0;
+      padding: 0;
     }
     .infolist ul li{
       list-style:none;
-      color:white;
+      margin:0;
+      padding: 10px 0;
+
     }
-    .infolist ul li::before{
-      content: "";
-        border-color: transparent #111;
-        border-style: solid;
-        border-width: 0.35em 0 0.35em 0.45em;
-        display: block;
-        height: 0;
-        width: 0;
-        left: -1em;
-        top: 0.9em;
-        position: relative;
-      }
     .infocontent{
       position:absolute;
       top:100px;
       right:70px;
       width:400px;
-      height:275px;
+      height:315px;
       overflow:hidden;
       border:1px solid #666666;
+      background-color:#fff;
+      padding:10px;
+      opacity:0.8;
+    }
+    .infocontent span{
+      display: block;
+      font-weight: bold;
+      color: #1c4991;
     }
