--- a/boilerplate/include/certifications.html
+++ b/boilerplate/include/certifications.html
@@ -1,6 +1,9 @@
 <div class="container">
 				<h2 class="section-heading certifications-heading">CERTIFICATIONS & CONTRACT VEHICLES</h2>
 				<div class="certifications">
+						<div>
+							<a href="#"><img src="img/cmmil3.png" class="img-responsive" alt=""></a>
+						</div>
 
 					  <div>
 							<a href="#"><img src="img/sba-logo.png" class="img-responsive" alt=""></a>
