--- a/boilerplate/css/main.css
+++ b/boilerplate/css/main.css
@@ -4070,9 +4070,6 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
 .hero-unit-animated {
   padding: 100px 0;
   color: #fff;
-  background-image: url('../img/hero-unit-bg.png?1420789489');
-  background-repeat: no-repeat;
-  background-position: center -75px;
 }
 .hero-unit-animated .hero-heading {
   font-family: "Roboto Condensed", sans-serif;
@@ -7270,3 +7267,122 @@ ul.clients-block li {
       font-weight: bold;
       color: #1c4991;
     }
+.introtext{
+  position: absolute;
+  text-align: left;
+  top: 10%;
+  font-size: 3em;
+  z-index: 1;
+  left: 20%;
+  color: white;
+  width: 60%;
+}
+
+.ticker-container {
+  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+  height: 60px;
+  width: 100%;
+  text-align: center;
+  position: relative;
+  overflow: hidden;
+  background-color: rgba(0,0,0,1);
+  color: white;
+  /*background-color: white;
+  color: black;*/
+  font-size: 1.1em;
+}
+.ticker-container .ticker-caption {
+  height: 50%;
+  width: 100%;
+  background-color: #EC0B43;
+  display: table;
+  position: absolute;
+  color: white;
+  font-size: 0.8em;
+  z-index: 1;
+}
+.ticker-container .ticker-caption p {
+  height: inherit;
+  width: inherit;
+  display: table-cell;
+  vertical-align: middle;
+  font-weight: bold;
+}
+.ticker-container ul {
+  list-style: none;
+  padding: 0;
+  height: auto;
+}
+.ticker-container ul div {
+  overflow: hidden;
+  position: absolute;
+  z-index: 0;
+  display: inline;
+  min-width: 100%;
+  left: 0;
+  height: 50%;
+  transition: 0.25s ease-in-out;
+}
+.ticker-container ul div.ticker-active {
+  top: 30px;
+}
+.ticker-container ul div.not-active {
+  top: 60px;
+}
+.ticker-container ul div.remove {
+  top: 0;
+}
+.ticker-container ul div li {
+  padding: 5px 0;
+}
+.ticker-container ul div li span{
+  color:#c01613;
+}
+.ticker-container ul div li a {
+  color: #EC0B43;
+}
+
+@media (min-width: 500px) {
+  .ticker-container {
+    height: 30px;
+    text-align: left;
+  }
+  .ticker-container .ticker-caption {
+    height: 100%;
+    width: 150px;
+    background: url('../img/ticker-caption-bg.png');
+  }
+  .ticker-container .ticker-caption p {
+    text-align: left;
+    padding-left: 7px;
+  }
+  .ticker-container ul {
+    margin-left: 170px;
+    height: 100%;
+  }
+  .ticker-container ul div {
+    height: 100%;
+    left: 170px;
+  }
+  .ticker-container ul div.ticker-active {
+    top: 0;
+  }
+  .ticker-container ul div.not-active {
+    top: 30px;
+  }
+  .ticker-container ul div.remove {
+    top: -30px;
+  }
+}
+/*
+@media (min-width: 768px) {
+  .ticker-container {
+    margin-bottom: 10px;
+  }
+}
+
+@media (min-width: 992px) {
+  .ticker-container {
+    margin-bottom: 20px;
+  }
+}*/
